แก้ Responsive รอบ 2

--- a/index.html
+++ b/index.html
@@ -13,35 +13,12 @@
   <link rel = "icon" href =  "IMG/favicon.png" type = "image/x-icon"> 
   <link rel="stylesheet" href="CSS/style.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0-beta3/css/all.min.css">
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
- 
-  <script src="https://kit.fontawesome.com/66aa7c98b3.js" crossorigin="anonymous"></script>
   <link href="https://fonts.googleapis.com/css?family=Comfortaa:400,700,300|Quattrocento" rel="stylesheet">
   <link rel="shortcut icon" href="./img/fbavatar_1630400663387_6838396024049256103.png" type="image/x-icon">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"
   integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
- <meta name="title" content="Portfolio Website | Siraphop Patsopar">
- <meta name="title" content="Portfolio Website | Siraphop Patsopar">
- <meta itemprop="description" content="Web Developer | Open source Enthusiast">
- <meta name="application-name" content="Portfolio Website">
- <meta property="og:site_name" content="">
- <meta property="og:type" content="website">
- <meta property="og:title" content="Portfolio Website | Siraphop Patsopar">
- <meta property="og:description" content="Portfolio website | Web Developer | Open source Enthusiast">
- <meta name="language" content="English">  
- <meta property="twitter:card" content="summary_large_image">
-<meta name="twitter:title" content="Siraphop Patsopar">
-<meta name="twitter:description" content="Portfolio website | Web Developer | Open source Enthusiast">
-<meta property="og:locale" content="en">
-<meta name="language" content="English">
-<meta property="og:image:type" content="image/png">
-<meta property="og:image:width" content="512">
-<meta property="og:image:height" content="512">
-<meta property="twitter:image:type" content="image/png">
-<meta property="twitter:image:width" content="512">
-<meta property="twitter:image:width" content="512">
 </head>
+
 
 <body>
   <header class="header">
@@ -140,13 +117,14 @@
     <a href="#Education"></a>
 
     <h1 class="Education-heading">Education</h1>
+    <div class ="education">
     
     <!-- โรงเรียนประถม -->
     <div class="school-info">
       <img src="IMG/1.webp" alt="Chalarmprakiat School" class="school-icon">
       <div class="school-text">
         <p class="school-name">
-          Primary School Chalarmprakiat 60 Pansa</p>
+          <font style="color: #07374a; font-weight: bold;">Primary School</font></br> Chalarmprakiat 60 Pansa</p>
         <p class="school-duration">เรียนตั้งแต่ปี พ.ศ. XXXX ถึง XXXX</p>
         <a href="http://www.60pansa.ac.th/"> <i class="fas fa-earth-americas"></i></a>
         
@@ -157,8 +135,8 @@
     <div class="school-info">
       <img src="IMG/2.png" alt="Rajavinitbangkhen School" class="school-icon">
       <div class="school-text">
-        <p class="school-name">High School Rajavinitbangkhen School</p>
-        <p class="school-duration">เรียนตั้งแต่ปี พ.ศ. XXXX ถึง XXXX</p>
+        <p class="school-name">
+          <font style="color: #07374a; font-weight: bold;">High School</font></br> Rajavinitbangkhen School</p>                  
         <a href="https://www.rvb.ac.th/"> <i class="fas fa-earth-americas"></i></a>
       </div>
     </div>
@@ -168,7 +146,7 @@
       <img src="IMG/4.png" alt="Panyapiwat School" class="school-icon">
       <div class="school-text">
         <p class="school-name">
-           Collage Panyapiwat</p>
+          <font style="color: #07374a; font-weight: bold;">Collage</font></br> Panyapiwat</p>
         <p class="school-duration">เรียนตั้งแต่ปี พ.ศ. XXXX ถึง XXXX</p>
         <a href="https://www.panyapiwat.ac.th/"> <i class="fas fa-earth-americas"></i></a>
       </div>
@@ -180,12 +158,13 @@
       <img src="IMG/3.png" alt="Panyapiwat Institute of Management" class="school-icon">
       <div class="school-text">
         <p class="school-name">
-          University Panyapiwat Institute of Management</p>
+          <font style="color: #07374a; font-weight: bold;">University</font><br> Panyapiwat Institute of Management</p>
         <p class="school-duration">กำลังศึกษา</p>
         <a href="http://pim.ac.th"> <i class="fas fa-earth-americas"></i></a>
       </div>
     </div>
   </div>
+</div>
 </section>
 
 
